--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,8 @@
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
     "uuid": "^8.3.2"
+  },
+  "engines": {
+    "node": "v17.3.0"
   }
 }
